@@ -1,4 +1,5 @@
 Changes towards version 0.7:
+- Added a Remix option to the setup menu - Michael
 - Addon zips can live in content/addons directly - Michael
 - 3DO music separated into an addon pack - Michael
 - Major change in resource index scheme - Michael
